fix: mitigate bouncing scroll on safari

--- a/src/style.css
+++ b/src/style.css
@@ -1,16 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-#app {
-    height: 100vh;
-    width: 100vw;
-    overflow-y: auto;
-    -webkit-overflow-scrolling: touch;
-}
-
-html,
-body {
-    position: fixed;
-    overflow: hidden;
-}
